--- a/Tecnicas_optimizacion.ipynb
+++ b/Tecnicas_optimizacion.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -272,66 +272,89 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Correlación entre Consumo y PIB en el Intervalo (0.5, 1)\n",
+    "\n",
+    "En el rango entre 0.5 y 1, se observa una correlación casi perfecta entre el consumo y el PIB. Esto significa que durante este intervalo, ambos crecen al mismo ritmo. En particular, en los puntos (0.5, 0.5) y (1, 1) se alcanza un punto de equilibrio, donde el crecimiento del PIB es igual al del consumo. En términos matemáticos, la derivada del PIB y del consumo es prácticamente la misma, lo que indica una relación proporcional y equilibrada entre ambas variables. Este equilibrio implica que, durante este intervalo, las condiciones económicas están sincronizadas, con el consumo reflejando directamente el crecimiento económico.\n",
+    "\n",
+    "Desacople después del Punto 1\n",
+    "\n",
+    "A partir del punto 1 en la gráfica, se empieza a observar una diferencia importante: el PIB comienza a crecer más rápidamente que el consumo. La pendiente del PIB es más pronunciada, lo que indica un crecimiento más acelerado. Esto puede reflejar una serie de fenómenos económicos, entre ellos, el aumento de la productividad o inversiones que no se traducen inmediatamente en un aumento proporcional del consumo.\n",
+    "\n",
+    "Uno de los factores que debe considerarse en este contexto es la inflación. A medida que la economía crece y el PIB aumenta, es probable que también suban los precios. Este incremento de precios implica que, aunque el consumo nominal (la cantidad de bienes y servicios adquiridos) se mantenga, el costo real de los mismos bienes es mayor debido a la inflación. Por lo tanto, la gráfica muestra una pendiente creciente, incluso si los hogares mantienen el mismo nivel de vida. Es decir, el gasto en términos reales puede aumentar solo por el incremento en los precios, lo que lleva a un mayor esfuerzo económico por parte de los hogares para mantener su calidad de vida.\n",
+    "\n",
+    "Aplicación a la Microeconomía: Consumo y Ahorro\n",
+    "\n",
+    "Desde una perspectiva microeconómica, si asumimos que el consumo es equivalente a los ingresos laborales, podemos interpretar la gráfica como una representación del crecimiento salarial y cómo este afecta al consumo y al ahorro. Al inicio de la gráfica, en los puntos bajos, podríamos imaginar que una persona está ganando un salario modesto (digamos 500 euros). A medida que el salario aumenta, el consumo también sube, permitiendo mejorar la calidad de vida y satisfacer las necesidades básicas.\n",
+    "\n",
+    "Sin embargo, llega un punto en el que, aunque los ingresos siguen aumentando, el nivel de consumo no crece a la misma velocidad. Esto se debe a que, una vez cubiertas todas las necesidades, el gasto adicional se reduce. La diferencia entre el aumento de ingresos y el consumo se refleja como ahorro. Este ahorro es fundamental, ya que permite acumular un colchón financiero una vez alcanzada una estabilidad económica.\n",
+    "\n",
+    "El Consumo nunca es Negativo\n",
+    "\n",
+    "Es importante destacar que el consumo nunca puede ser negativo. Incluso en situaciones en las que el PIB es negativo (es decir, una contracción económica), los hogares seguirán consumiendo lo necesario para cubrir sus necesidades básicas. En este contexto, el ahorro acumulado, que se representa en la gráfica como la diferencia entre el crecimiento del PIB y el consumo, actúa como una red de seguridad que previene una quiebra financiera. Este ahorro es lo que permite que los hogares mantengan su nivel de consumo, incluso cuando la economía atraviesa tiempos difíciles."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El punto t* que minimiza la distancia es: 0.500000000000044\n"
+      "El valor de t* es: 0.9999999999999959\n"
      ]
     }
    ],
    "source": [
-    "import sympy as sp\n",
     "import numpy as np\n",
     "\n",
-    "# Definición de variables simbólicas\n",
-    "t = sp.Symbol('t')\n",
+    "# Definimos las funciones x(t) y y(t) y sus derivadas\n",
     "\n",
-    "# Definición de funciones\n",
-    "C1_x = 0.546875\n",
-    "C2_x = 0.161458333333333\n",
-    "C1_y = 0.375289519592281\n",
-    "C2_y = -1.25694645694064\n",
+    "def x(t):\n",
+    "    return (t**4)/24 + (t**2)/4 + 0.546875 * t + 0.161458333333333\n",
     "\n",
-    "# Funciones x(t) y y(t)\n",
-    "x_t = C1_x * t + C2_x + t**4 / 24 + t**2 / 4\n",
-    "y_t = C2_y + 2 * (2 * C1_y + t / 3)**(3 / 2)\n",
+    "def y(t):\n",
+    "    return 1.30054278393668 * (0.444101574826111 * t + 1)**(3/2) - 1.25694645694064\n",
     "\n",
-    "# Función de distancia\n",
-    "D = x_t - y_t\n",
+    "def dx_dt(t):\n",
+    "    return (t**3)/6 + t/2 + 0.546875\n",
     "\n",
-    "# Derivada de la función de distancia\n",
-    "D_prime = D.diff(t)\n",
+    "def dy_dt(t):\n",
+    "    return 0.38499312913494 * (0.444101574826111 * t + 1)**(1/2)\n",
+    "\n",
+    "# Definimos la función f(t) y su derivada f'(t)\n",
+    "def f(t):\n",
+    "    return x(t) - y(t)\n",
+    "\n",
+    "def df_dt(t):\n",
+    "    return dx_dt(t) - dy_dt(t)\n",
     "\n",
     "# Método de Newton-Raphson\n",
-    "def newton_raphson(initial_guess, max_iter=100, tol=1e-6):\n",
-    "    t_n = initial_guess\n",
+    "def newton_raphson(t0, tol=1e-6, max_iter=100):\n",
+    "    t = t0\n",
     "    for _ in range(max_iter):\n",
-    "        D_value = D.evalf(subs={t: t_n})\n",
-    "        D_prime_value = D_prime.evalf(subs={t: t_n})\n",
-    "        \n",
-    "        if D_prime_value == 0:\n",
-    "            print(\"Derivada cero, no se puede continuar.\")\n",
-    "            return None\n",
-    "        \n",
-    "        t_n1 = t_n - D_value / D_prime_value\n",
-    "        \n",
-    "        if abs(t_n1 - t_n) < tol:\n",
-    "            return t_n1\n",
-    "        \n",
-    "        t_n = t_n1\n",
-    "    return t_n\n",
+    "        t_next = t - f(t) / df_dt(t)\n",
+    "        if abs(t_next - t) < tol:\n",
+    "            return t_next\n",
+    "        t = t_next\n",
+    "    raise ValueError(\"No se encontró la raíz dentro del número máximo de iteraciones\")\n",
     "\n",
-    "# Encontrar el punto t*\n",
-    "t_star = newton_raphson(initial_guess=0.5)  # Inicio en t = 0.5\n",
-    "print(f\"El punto t* que minimiza la distancia es: {t_star}\")\n"
+    "# Punto inicial para Newton-Raphson\n",
+    "t0 = 1.0\n",
+    "t_star = newton_raphson(t0)\n",
+    "\n",
+    "print(f\"El valor de t* es: {t_star}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El valor obtenido de 𝑡∗≈1 indica que las funciones que representan las tasas de variación del PIB 𝑥(𝑡) y del consumo de los hogares y(t) se igualan alrededor del primer trimestre. Esto sugiere un punto de equilibrio en la evolución de ambas variables, lo que tiene implicaciones relevantes para el análisis económico.\n",
+    "\n",
+    "Desde el punto de vista económico, este equilibrio refleja una sincronización entre el crecimiento del PIB y el consumo en el trimestre 1, lo que podría interpretarse como un momento de estabilidad económica. En este punto, la producción total de bienes y servicios (PIB) y el gasto de los hogares (consumo) crecen a la misma tasa, lo que sugiere un balance en las dinámicas de crecimiento económico."
    ]
   }
  ],
